hphp/hack/test/typecheck/private_bad2.php.exp
File "private_bad2.php", line 11, characters 20-22:
You cannot access a private method with parent:: (Typing[4112])
  File "private_bad2.php", line 4, characters 27-29:
  This method is private
